--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Kristy James' personal website
+email: "'.'.join('kristy', 'p', 'james') + '@gmail.com'"
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A growing website about interesting stuff I've been doing with
+  electronic articulography, computational linguistics
+  and other writings.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://kristyj.github.io" # the base hostname & protocol for your site
+twitter_username: kristylein
+github_username:  kristyj
 
 # Build settings
 markdown: kramdown
